Use delegated events

--- a/src/app/itemList/row/template.html
+++ b/src/app/itemList/row/template.html
@@ -1,4 +1,4 @@
-<li class="{{#completed}}completed{{/completed}}">
+<li class="{{#completed}}completed{{/completed}}{{#editing}}editing{{/editing}}">
   <div class="view">
     <input class="toggle" type="checkbox" {{#completed}}checked="checked"{{/completed}}>
     <label>{{ text }}</label>
