--- a/src/app/itemList/template.html
+++ b/src/app/itemList/template.html
@@ -1,5 +1,5 @@
-<section id="main">
-  <input id="toggle-all" type="checkbox">
+<section id="main" class="{{#isListEmpty}}hidden{{/isListEmpty}}">
+  <input id="toggle-all" type="checkbox" {{#isAllCompleted}}checked{{/isAllCompleted}}>
   <label for="toggle-all">Mark all as complete</label>
   <ul id="todo-list"></ul>
 </section>
