--- a/src/app/itemActions/template.html
+++ b/src/app/itemActions/template.html
@@ -1,6 +1,10 @@
 <footer id="footer" class="{{#isListEmpty}}hidden{{/isListEmpty}}">
   <span id="todo-count">{{nTodosLeft}}</span>
-  <ul id="filters"></ul>
+  <ul id="filters">
+    <li><a href="#/" class="selected">All</a></li>
+    <li><a href="#/active">Active</a></li>
+    <li><a href="#/completed">Completed</a></li>
+  </ul>
   <button id="clear-completed" class="{{#isNoneCompleted}}hidden{{/isNoneCompleted}}">
     Clear completed
   </button>
