--- a/src/app/itemList/row/template.html
+++ b/src/app/itemList/row/template.html
@@ -1,8 +1,8 @@
-<li class="{{#completed}}completed{{/completed}}{{#editing}} editing{{/editing}}{{#hidden}} hidden{{/hidden}}">
+<li class="<%= completed ? 'completed' : '' %><%= editing ? ' editing' : '' %><%= hidden ? ' hidden' : '' %>">
   <div class="view">
-    <input class="toggle" type="checkbox" {{#completed}}checked="checked"{{/completed}}>
-    <label>{{text}}</label>
+    <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
+    <label><%= text %></label>
     <button class="destroy"></button>
   </div>
-  <input class="edit" value="{{text}}">
+  <input class="edit" value="<%= text %>">
 </li>
