--- a/src/app/itemList/row/template.html
+++ b/src/app/itemList/row/template.html
@@ -1,4 +1,4 @@
-<li class="<%= completed ? 'completed' : '' %><%= editing ? ' editing' : '' %><%= hidden ? ' hidden' : '' %>">
+<li class="<%= completed ? 'completed' : '' %><%= editing ? ' editing' : '' %><%= visible ? '' : ' hidden' %>">
   <div class="view">
     <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
     <label><%- title %></label>
