--- a/src/app/template.html
+++ b/src/app/template.html
@@ -1,23 +1,23 @@
-<section id="todoapp">
-	<header id="header">
+<section class="todoapp">
+	<header class="header">
 		<h1>todos</h1>
-		<input id="new-todo" placeholder="What needs to be done?" autofocus>
+		<input class="new-todo" placeholder="What needs to be done?" autofocus>
 	</header>
-	<section id="main" class="<%= length === 0 ? 'hidden' : '' %>">
-		<input id="toggle-all" type="checkbox" <%= nActive === 0 ? 'checked' : '' %>>
+	<section class="main" class="<%= length === 0 ? 'hidden' : '' %>">
+		<input class="toggle-all" type="checkbox" <%= nActive === 0 ? 'checked' : '' %>>
 		<label for="toggle-all">Mark all as complete</label>
-		<ul id="todo-list"></ul>
+		<ul class="todo-list"></ul>
 	</section>
-	<footer id="footer" class="<%= length === 0 ? 'hidden' : '' %>">
-		<span id="todo-count">
+	<footer class="footer" class="<%= length === 0 ? 'hidden' : '' %>">
+		<span class="todo-count">
 			<strong><%= nActive %></strong> <%= 'item' + (nActive === 1 ? '' : 's') + ' left' %>
 		</span>
-		<ul id="filters">
+		<ul class="filters">
 			<li><a href="#/" class="<%= route === '' ? 'selected' : '' %>">All</a></li>
 			<li><a href="#/active" class="<%= route === 'active' ? 'selected' : '' %>">Active</a></li>
 			<li><a href="#/completed" class="<%= route === 'completed' ? 'selected' : '' %>">Completed</a></li>
 		</ul>
-		<button id="clear-completed" class="<%= nCompleted === 0 ? 'hidden' : '' %>">
+		<button class="clear-completed" class="<%= nCompleted === 0 ? 'hidden' : '' %>">
 			Clear completed
 		</button>
 	</footer>
